# GIF

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Rapport.tex  makefile
Analyse/: Classes.class.violet.html  Use case.ucase.violet.html
Example/: .gitignore  CMakeLists.txt  Makefile
Example/src/: main.cpp
GIF/: .gitignore  CMakeLists.txt  Makefile
GIF/include/: Box.h  Button.h  Controller.h  Element.h  GIF.h  Library.h  MutexInterface.h  MutexUnix.h  MutexWindows.h  Shader.h  Texture.h  Thread.h  ThreadInterface.h  ThreadUnix.h  ThreadWindows.h  Window.h
GIF/src/: Box.cpp  Button.cpp  Controller.cpp  Element.cpp  GIF.cpp  Library.cpp  MutexInterface.cpp  MutexUnix.cpp  MutexWindows.cpp  Shader.cpp  Texture.cpp  ThreadInterface.cpp  ThreadUnix.cpp  ThreadWindows.cpp  Window.cpp  example.cpp
Project/: Makefile
Project/include/: Element.h  ThreadInterface.h  ThreadUnix.h  ThreadWindows.h  Window.h
Project/src/: Element.cpp  ThreadInterface.cpp  ThreadUnix.cpp  ThreadWindows.cpp  Window.cpp  example.cpp
Shaders/Arrow/: shader.frag  shader.vert
Shaders/Box/: shader.frag
Shaders/Button/: shader.frag
Shaders/click-default-120/: shader.frag
Shaders/default/: default.vert
Shaders/default-120/: shader.frag
cmake/modules/: Findglew.cmake  Findglfw3.cmake
